# panda_sim_ws

gnss_ins_sim/sim/: imu_model.py
src/franka_ros/franka_description/robots/: camera.urdf.xacro  camera.xacro  hand.urdf.xacro  hand.xacro  panda.gazebo.xacro  panda.transmission.xacro  panda_arm.urdf.xacro  panda_arm.xacro  panda_arm_hand.urdf.xacro  panda_arm_hand_camera.urdf.xacro  panda_camera.gazebo.xacro  test.sdf  test.urdf
src/moveit_tutorials/doc/pick_place/: CMakeLists.txt
src/moveit_tutorials/doc/pick_place/src/: pick_place_tutorial2.cpp
src/panda_moveit_config/config/: panda_arm.xacro  panda_arm_hand.srdf.xacro  sensors_kinect_depthmap.yaml  sensors_kinect_pointcloud.yaml
src/panda_moveit_config/launch/: grasp_client.rviz  moveit.rviz  moveit_example.rviz  sensor_manager.launch.xml
src/panda_simulation/: CMakeLists.txt  package.xml
src/panda_simulation/config/: panda_control_effort.yaml  panda_control_effort_test_pid.yaml
src/panda_simulation/launch/: simulation.launch  simulation_camera.launch
src/panda_simulation/src/: gazebo_getPoses.py  grasp_action_client.py  grasp_action_client_multi_obj.py  grasp_demo_utils.py  grasp_tests_client_graspnet.py  grasp_tests_client_pvn3d.py  objs_in_gazebo.npy  panda_remove_from_dpth_img.py
src/panda_simulation/src/clutter_poses/: objs_in_gazebo1.npy  objs_in_gazebo2.npy  objs_in_gazebo3.npy
src/panda_simulation/src/graspnet_test_poses/: objs_in_gazebo.npy  objs_in_gazebo_1.npy  objs_in_gazebo_2.npy  (+2 more)
src/panda_simulation/srv/: computeGrasps.srv  computeGrasps_multiClass.srv  getPoses_multiClass.srv
(+106 files in other folders)
